--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords"
     content="​Hello!, ​Kalvin Piterson, My Portfolio, Testimonials, ​IT Solution Strategy Development, ​My Experties, Nam ultrices ultrices nec tortor pulvinar esteras loremips est orem., Follow us, Contact Me">
   <meta name="description" content="">
-  <title>Página Inicial</title>
+  <title>Israel Ribeiro Junqueira</title>
   <link rel="stylesheet" href="nicepage.css" media="screen">
   <link rel="stylesheet" href="Página-Inicial.css" media="screen">
   <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -18,6 +18,7 @@
     href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
   <link id="u-page-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+    <link rel="icon" type="image/x-icon" href="images/eu.ico">
 
 
 
